Mock first psql query and json response

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -8,9 +8,18 @@ CFLAGS = -g -Wall -fPIC
 default: $(TARGET)
 all: default
 
-SOURCES = $(wildcard *.c)
+SOURCES = \
+	$(wildcard *.c) \
+	$(wildcard dto/*.c) \
+	$(wildcard route/*.c) \
+	$(wildcard storage/*.c)
+
 OBJECTS = $(SOURCES:.c=.o)
-HEADERS = $(wildcard *.h)
+HEADERS = \
+	$(wildcard *.h) \
+	$(wildcard dto/*.h) \
+	$(wildcard route/*.h) \
+	$(wildcard storage/*.h)
 
 %.o: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -c $< -o $@
